--- a/.github/workflows/flake.yaml
+++ b/.github/workflows/flake.yaml
@@ -1,4 +1,4 @@
-name: "Flake check"
+name: "Flake & Black check"
 
 on:
   push:
@@ -18,6 +18,10 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: 3.9
+      - name: formatting with black
+        run: |
+          pip install black
+          black --line-length=127 --check .
       - name: Install flake8
         run: |
           pip install flake8
