--- a/.github/workflows/bandit.yaml
+++ b/.github/workflows/bandit.yaml
@@ -12,5 +12,5 @@ jobs:
       - name: Bandit Check (Python security linter)
         uses: jpetrucciani/bandit-check@master
         with:
-          bandit_flags: '-s B105'
+          bandit_flags: '-s B105,B311'
           path: './pyecotrend_ista/'
