--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -40,3 +40,6 @@
 - name: "wait"
   description: in examination
   color: 12CE3B
+- name: "Beta"
+  description: Beta Version Release
+  color: d73a4a
