🌱 1.0.34 Project description pypi
Signed-off-by: Ludy87 <Ludy87@users.noreply.github.com>

--- a/.github/workflows/bandit.yaml
+++ b/.github/workflows/bandit.yaml
@@ -15,4 +15,4 @@ jobs:
         uses: jpetrucciani/bandit-check@master
         with:
           bandit_flags: '-s B105,B311'
-          path: './pyecotrend_ista/'
+          path: './src/pyecotrend_ista/'
