--- a/.github/workflows/bandit.yaml
+++ b/.github/workflows/bandit.yaml
@@ -3,6 +3,8 @@ name: Bandit Check
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - '.github/**'
   pull_request:
     branches: [ main ]
 
