--- a/.github/workflows/flake.yaml
+++ b/.github/workflows/flake.yaml
@@ -3,6 +3,8 @@ name: "Flake & Black check"
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - '.github/**'
   pull_request:
     branches: [ main ]
 
