--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -17,9 +17,10 @@ jobs:
         with:
           ref: main
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v4.2.0
         with:
           python-version: '3.x'
+          check-latest: true
       - name: Get Version
         id: version
         shell: bash
@@ -54,9 +55,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up Python
         if: steps.check-tag.outputs.match == 'true'
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v4.2.0
         with:
           python-version: "3.9"
+          check-latest: true
       - name: Install dependencies
         if: steps.check-tag.outputs.match == 'true'
         run: |
