--- a/.github/workflows/bandit.yaml
+++ b/.github/workflows/bandit.yaml
@@ -12,7 +12,7 @@ jobs:
   bandit:
     runs-on: "ubuntu-latest"
     steps:
-      - uses: "actions/checkout@v3"
+      - uses: actions/checkout@v3.1.0
       - name: Bandit Check (Python security linter)
         uses: jpetrucciani/bandit-check@master
         with:
