--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -26,20 +26,18 @@ jobs:
         shell: bash
         run: |
           version="$(python3 ./.github/actions/get_version.py)"
-          echo "::set-output name=version::$version"
+          echo "version=$version" >> $GITHUB_OUTPUT
       - name: Is Tag exists
         uses: mukunku/tag-exists-action@v1.2.0
         id: checkTag
         with: 
           tag: ${{ steps.version.outputs.version }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
       - if: steps.checkTag.outputs.exists == 'false'
         name: Check Tag
         id: check-tag
         run: |
           if [[ "${{ steps.version.outputs.version }}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-              echo ::set-output name=match::true
+              echo "match=true" >> $GITHUB_OUTPUT
           fi
       - name: Build
         if: steps.check-tag.outputs.match == 'true'
