--- a/.github/workflows/flake.yaml
+++ b/.github/workflows/flake.yaml
@@ -16,10 +16,13 @@ jobs:
       - uses: actions/checkout@v3.4.0
         with:
           fetch-depth: 0
-      - name: Set up Python 3.9
+      - name: Set up Python 3.x
         uses: actions/setup-python@v4.6.1
         with:
-          python-version: 3.9
+          python-version: |
+            3.9
+            3.10
+            3.11
           check-latest: true
       - name: formatting with black
         run: |
