--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -19,7 +19,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4.6.1
         with:
-          python-version: '3.x'
+          python-version: |
+            3.9
+            3.10
+            3.11
           check-latest: true
       - name: Get Version
         id: version
