--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -63,13 +63,23 @@ repos:
       - id: forbid-new-submodules
       - id: mixed-line-ending
         args: [--fix=lf]
-        exclude_types: [png,yaml]
+        exclude_types: [png, yaml]
         exclude: (\.md|\.yml|\.jpg|\.png)$
       - id: trailing-whitespace
         exclude_types: [json]
       - id: pretty-format-json
-        args: [--autofix,--no-ensure-ascii]
+        args: [--autofix, --no-ensure-ascii]
         exclude: ^src/(.*url|.+ua)\.json$
+      - id: check-executables-have-shebangs
+        stages: [manual]
+      - id: check-case-conflict
+      - id: requirements-txt-fixer
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.1.0
+    hooks:
+      - id: prettier
+        exclude_types: [json]
+        exclude: \.md$
   - repo: https://github.com/cdce8p/python-typing-update
     rev: v0.6.0
     hooks:
