Refactor to ensure PEP8 conformity
- Renamed methods in `login_helper.py` and `pyecotrend_ista.py` to conform to PEP8 naming conventions (`_get_auth_code`, `_get_cookie_and_action`, `_refresh_token`, `_get_token`, `_is_connected`, `_set_account_values`, `_set_account`, `get_version`, `get_uuids`, `get_support_code`, `get_user_agent`).
- Added a `deprecated` decorator function in `exception_classes.py` to mark deprecated functions with appropriate warnings.
- Added aliases for front-faced methods to maintain backwards-compatibility and marked them as deprecated
- Updated `ruff.toml` to include `TRY003` in `lint.extend-ignore`.

--- a/ruff.toml
+++ b/ruff.toml
@@ -4,7 +4,7 @@ target-version = "py311"
 
 [lint]
 extend-select = ["I", "TRY", "UP", "D", "W"]
-extend-ignore = ["D213", "D202", "D203", "D213", "UP038"]
+extend-ignore = ["D213", "D202", "D203", "D213", "UP038", "TRY003"]
 
 [lint.pydocstyle]
 convention = "numpy"
