--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,15 +12,15 @@ ci:
 
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.1.15
+    rev: v0.4.9
     hooks:
       - id: ruff
-        exclude: ^.github
+        exclude: ^(.github|.*object.*\.py$)
         args:
           - --fix
           - --line-length=127
   - repo: https://github.com/PyCQA/autoflake
-    rev: v2.2.1
+    rev: v2.3.1
     hooks:
       - id: autoflake
         args:
@@ -29,7 +29,7 @@ repos:
           - "--remove-unused-variables"
           - "--remove-all-unused-imports"
   - repo: https://github.com/psf/black-pre-commit-mirror
-    rev: 24.1.1
+    rev: 24.4.2
     hooks:
       - id: black
         args:
@@ -37,7 +37,7 @@ repos:
           - --quiet
         files: ^((src|tests)/.+)?[^/]+\.py$
   - repo: https://github.com/codespell-project/codespell
-    rev: v2.2.6
+    rev: v2.3.0
     hooks:
       - id: codespell
         args:
@@ -97,7 +97,7 @@ repos:
         additional_dependencies:
           - black==24.1.1
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.15.0
+    rev: v3.16.0
     hooks:
       - id: pyupgrade
         args: [--py311-plus]
