--- a/ruff.toml
+++ b/ruff.toml
@@ -3,7 +3,7 @@ indent-width = 4
 target-version = "py311"
 
 [lint]
-extend-select = ["I", "TRY", "UP", "D", "W"]
+extend-select = ["I", "TRY", "UP", "D", "W", "N"]
 extend-ignore = ["D213", "D202", "D203", "D213", "UP038", "TRY003"]
 
 [lint.pydocstyle]
