Remove black pre-commit hook and update ruff configuration
- Updated ruff.toml to include isort configuration:
  - Force sort within sections.
  - Recognize known first-party imports.
  - Combine as imports.
  - Do not split on trailing comma.
- Removed the black pre-commit hook from .pre-commit-config.yaml. as it conflicts with ruffs imports sorting

--- a/ruff.toml
+++ b/ruff.toml
@@ -12,3 +12,11 @@ convention = "numpy"
 [format]
 quote-style = "double"
 indent-style = "space"
+
+[lint.isort]
+force-sort-within-sections = true
+known-first-party = [
+    "pyecotrend_ista",
+]
+combine-as-imports = true
+split-on-trailing-comma = false
