Add unit tests, update .gitignore and requirements
This commit introduces the following changes:

- New Unit Tests: Added unit tests for the `get_raw` and `consum_raw` methods in `test_consumptions.py`.
- Updated .gitignore: Updated the .gitignore file to exclude unit tests and unit test related data files (`tests/*.py`, `tests/*.ambr`, `!tests/*.json`)
Added Dependency: Added pytest-dataset dependency to requirements_test.txt for unit test data fixtures.

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,10 @@ coverage.xml
 .pytest_cache/
 test*.*
 test/
+# unignore unittests and related data files
+!tests/*.py
+!tests/*/*.ambr
+!tests/*/*.json
 
 # Translations
 *.mo
