Refactor access_token management and error handling
- Added access_token setter method to update the start timer when assigning a new access token value.
- Updated access_token usage throughout the class to use the setter method.
- Enhanced error handling during login and API requests by raising specific exceptions (LoginError, ServerError, ParserError) for better clarity and management.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,14 @@ split-on-trailing-comma = false
 addopts = "--cov=pyecotrend_ista --cov-report=term-missing"
 testpaths = ["tests"]
 pythonpath = ["src"]
+
+[tool.pylint.FORMAT]
+max-line-length=127
+
+[tool.pylint."MESSAGES CONTROL"]
+disable = [
+    "too-many-ancestors",
+    "too-many-arguments",
+    "too-many-instance-attributes",
+    "wrong-import-order",
+]
