Enhance test configurations and coverage
- Updated pytest configuration in `pyproject.toml`:
  - Changed `--cov` option to cover the `src/pyecotrend_ista/` directory.
  - Added `-n auto` to enable parallel test execution with pytest-xdist.

- Modified `requirements_test.txt`:
  - Added `pytest-xdist==3.6.1` for parallel test execution.

- Cleaned up `__init__.py`:
  - Removed unused import `BaseError`.

- Fixed error in `login_helper.py`:
  - Changed `requests.codes.no_content` to `requests.codes["no_content"]`.

- Added new snapshot test for `get_consumption_unit_details` method.

- Enhanced `conftest.py` to mock additional API responses for comprehensive testing.

- Refactored `test_consumptions.py`:
  - Added tests for `consum_raw` method with various year and month filters.

- Added `test_login.py`:
  - Parametrized tests for `login` method with `force_login` flag.
  - Added a new test for the `logout` method.

- Added `test_other.py`:
  - Included tests for utility methods and deprecated method warnings.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,6 +37,7 @@ repos:
           - --skip="./.*,*.csv,*.json,*.ambr"
           - --quiet-level=2
         exclude_types: [csv, json]
+        exclude: tests/__snapshots__/
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
@@ -56,7 +57,7 @@ repos:
       - id: mixed-line-ending
         args: [--fix=lf]
         exclude_types: [png, yaml]
-        exclude: (\.md|\.yml|\.jpg|\.png)$
+        exclude: (\.md|\.yml|\.jpg|\.png|\.ambr)$
       - id: trailing-whitespace
         exclude_types: [json]
       - id: pretty-format-json
