--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,7 @@
-# Globale Owner für alle Dateien
+# Global owner for all files
 *                       @Ludy87
+
+# Owner for specific directories and files
 /src/                   @tr4nt0r
 /tests/                 @tr4nt0r
 requirements_test.txt   @tr4nt0r
