--- a/.github/workflows/review-request.yml
+++ b/.github/workflows/review-request.yml
@@ -1,8 +1,12 @@
 name: Request Reviewers
 
 on:
-  pull_request:
+  pull_request_target:
     types: [opened, synchronize]
+
+permissions:
+  contents: write
+  pull-requests: write
 
 jobs:
   request-reviewers:
