--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,6 +1,6 @@
 pytest==8.2.2
+pytest-asyncio==0.23.7
 pytest-cov==5.0.0
-pytest-dataset==0.3.2
+pytest-httpx==0.30.0
 pytest-xdist==3.6.1
-requests-mock[fixture]==1.12.1
 syrupy==4.6.1
