--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,37 +1,114 @@
-[tool.ruff]
+[build-system]
+build-backend = "setuptools.build_meta"
+requires = ['setuptools>=61.2', "setuptools-scm", "requests", "dataclasses_json"]
+
+[project]
+authors = [
+  {name = "Ludy87", email = "android@astra-g.org"}
+]
+classifiers = [
+  "Development Status :: 4 - Beta",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
+  "Intended Audience :: Developers",
+  "Topic :: Software Development",
+  "Topic :: Utilities",
+  "Topic :: Home Automation",
+  "Topic :: Software Development :: Libraries :: Python Modules"
+]
+dependencies = [
+  "requests>=2",
+  "dataclasses-json>=0.6"
+]
+description = "Python ecotrend-ista Api"
+dynamic = ["version", "readme"]
+keywords = ["python", "api", "ecotrend", "ista"]
+license = {file = "LICENSE"}
+name = "pyecotrend-ista"
+# readme = "README.md"
+requires-python = ">=3.11"
+
+[project.optional-dependencies]
+doc = [
+  "mkdocs==1.6.0",
+  "mkdocstrings[python]==0.25.1",
+  "Markdown==3.3.6",
+  "markdown-callouts==0.4.0",
+  "mkdocs-material==9.5.29",
+  "pygments==2.17.2",
+  "pymdown-extensions==10.3.1",
+  "mdx-gh-links==0.4",
+  "mkdocs-click==0.8.1",
+  "mkdocs-minify-plugin==0.8.0",
+  "mkdocs-git-revision-date-localized-plugin==1.2.6",
+  "mkdocs-git-committers-plugin-2==2.3.0",
+  "mkdocs-git-authors-plugin==0.9.0",
+  "mkdocs-autorefs==1.0.1",
+  "mkdocs-literate-nav==0.6.1"
+]
+test = [
+  "pytest==8.2.2",
+  "pytest-cov==5.0.0",
+  "pytest-xdist==3.6.1",
+  "requests-mock[fixture]==1.12.1",
+  "syrupy==4.6.1"
+]
+
+[project.urls]
+Documentation = "https://docs.your.project"
+Homepage = "http://github.com/Ludy87/pyecotrend_ista"
+Repository = "http://github.com/Ludy87/pyecotrend_ista"
+
+[tool.black]
 line-length = 127
+target-version = ["py311"]
+
+[tool.pylint.FORMAT]
+max-line-length = 127
+
+[tool.pylint."MESSAGES CONTROL"]
+disable = [
+  "too-many-ancestors",
+  "too-many-arguments",
+  "too-many-instance-attributes",
+  "wrong-import-order",
+  "too-many-lines",
+  "too-many-locals"
+]
+
+[tool.pytest.ini_options]
+addopts = "--cov=src/pyecotrend_ista/ --cov-report=term-missing -n auto"
+pythonpath = ["src"]
+testpaths = ["tests"]
+
+[tool.ruff]
 indent-width = 4
+line-length = 127
 target-version = "py311"
+
+[tool.ruff.format]
+docstring-code-format = true
+docstring-code-line-length = 127
+indent-style = "space"
+quote-style = "double"
 
 [tool.ruff.lint]
 extend-select = ["I", "TRY", "UP", "D", "W", "N"]
-ignore = ["D213", "D202", "D203", "D213", "UP038", "TRY003"]
+ignore = ["D213", "D202", "D203", "D213", "UP038", "D406", "D407", "TRY003"]
+
+[tool.ruff.lint.isort]
+combine-as-imports = true
+force-sort-within-sections = true
+known-first-party = ["pyecotrend_ista"]
+split-on-trailing-comma = false
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
 
-[tool.ruff.format]
-quote-style = "double"
-indent-style = "space"
-
-[tool.ruff.lint.isort]
-force-sort-within-sections = true
-known-first-party = ["pyecotrend_ista"]
-combine-as-imports = true
-split-on-trailing-comma = false
-
-[tool.pytest.ini_options]
-addopts = "--cov=src/pyecotrend_ista/ --cov-report=term-missing -n auto"
-testpaths = ["tests"]
-pythonpath = ["src"]
-
-[tool.pylint.FORMAT]
-max-line-length=127
-
-[tool.pylint."MESSAGES CONTROL"]
-disable = [
-    "too-many-ancestors",
-    "too-many-arguments",
-    "too-many-instance-attributes",
-    "wrong-import-order",
-]
+[tool.setuptools.dynamic]
+readme = {file = ["README.md"]}
+version = {attr = 'pyecotrend_ista.__version.__version__'}
