--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ requires-python = ">=3.11"
 
 [project.optional-dependencies]
 doc = [
+  "tox==4.16.0",
   "mkdocs==1.6.0",
   "mkdocstrings[python]==0.25.1",
   "Markdown==3.3.6",
@@ -51,6 +52,7 @@ doc = [
   "mkdocs-literate-nav==0.6.1"
 ]
 test = [
+  "tox==4.16.0",
   "pytest==8.2.2",
   "pytest-cov==5.0.0",
   "pytest-xdist==3.6.1",
