--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -3,8 +3,8 @@ name: Test
 on:
   push:
     branches: [main]
-    paths-ignore:
-      - ".github/**"
+    # paths-ignore:
+    #   - ".github/**"
   pull_request:
     branches: [main]
 
@@ -24,13 +24,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements_test.txt
-      - name: Test
-        run: |
-          pytest --cov-report=xml
+          pip install .[test]
+      - name: Run tests with tox
+        run: tox -e py${{ matrix.python_version }}
       - uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          slug: Ludy87/pyecotrend-ista
           fail_ci_if_error: false
           verbose: true
