--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,9 @@ name = "pyecotrend-ista"
 requires-python = ">=3.11"
 
 [project.optional-dependencies]
+publish = [
+    "tox==4.16.0",
+]
 doc = [
   "tox==4.16.0",
   "mkdocs==1.6.0",
