--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 skipsdist = True
-envlist = py311, py312, format, lint, pre-commit, docstrings, docs
+envlist = py311, py312, format, lint, pre-commit, docstrings, docs, test-publish
 isolated_build = True
 
 [gh-actions]
@@ -79,6 +79,16 @@ setenv =
     MKDOCS_GIT_COMMITTERS_APIKEY = {env:GITHUB_TOKEN}
 commands =
     mkdocs build
+
+[testenv:test-publish]
+description = Build and publish the test-package to PyPI
+skip_install = true
+deps =
+    build
+    twine
+commands =
+    python -m build
+    python -m twine upload --repository testpypi dist/*
 
 [common]
 files = src/pyecotrend_ista/__init__.py src/pyecotrend_ista/const.py src/pyecotrend_ista/exception_classes.py src/pyecotrend_ista/helper_object_de.py src/pyecotrend_ista/login_helper.py src/pyecotrend_ista/pyecotrend_ista.py src/pyecotrend_ista/__version.py src/pyecotrend_ista/types.py
