--- a/tox.ini
+++ b/tox.ini
@@ -90,5 +90,15 @@ commands =
     python -m build
     python -m twine upload --repository testpypi dist/*
 
+[testenv:publish]
+description = Build and publish the package to PyPI
+skip_install = true
+deps =
+    build
+    twine
+commands =
+    python -m build
+    python -m twine upload dist/*
+
 [common]
 files = src/pyecotrend_ista/__init__.py src/pyecotrend_ista/const.py src/pyecotrend_ista/exception_classes.py src/pyecotrend_ista/helper_object_de.py src/pyecotrend_ista/login_helper.py src/pyecotrend_ista/pyecotrend_ista.py src/pyecotrend_ista/__version.py src/pyecotrend_ista/types.py
