--- a/.github/workflows/a_pre_commit.yml
+++ b/.github/workflows/a_pre_commit.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.TOKEN }}
+          fetch-depth: 0
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -31,7 +32,7 @@ jobs:
           pre-commit install
       - name: Pre-commit and auto commit
         run: |
-          pre-commit run --all-files || true
+          pre-commit run --all-files -c .pre-commit-config.yaml --show-diff-on-failure || true
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
