--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 skipsdist = True
-envlist = py311, py312, format, lint, pre-commit, docstrings, docs, test-publish
+envlist = py311, py312, format, lint, pre-commit, docstrings, documentation, test-publish
 isolated_build = True
 
 [gh-actions]
@@ -56,7 +56,7 @@ deps =
 commands =
     pydocstyle {[common] files} tests/ --convention=numpy
 
-[testenv:docs]
+[testenv:documentation]
 description = Build the documentation
 skip_install = true
 deps =
