--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -27,9 +27,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .[doc]
-      - name: Build & Publish docs
+      - name: Build & Publish documentation
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          tox -e docs
+          tox -e documentation
           mkdocs gh-deploy --force
