--- a/.github/workflows/review-request.yml
+++ b/.github/workflows/review-request.yml
@@ -5,13 +5,14 @@ on:
     types: [opened, synchronize]
 
 permissions:
-  contents: write
-  pull-requests: write
+  contents: read
 
 jobs:
   request-reviewers:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
