--- a/.github/workflows/review-request.yml
+++ b/.github/workflows/review-request.yml
@@ -11,8 +11,8 @@ jobs:
   request-reviewers:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
-      pull-requests: write
+      pull-requests: read
+      issues: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
