--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Upload zip to release
         uses: svenstaro/upload-release-action@04733e069f2d7f7f0b4aebc4fbdbce8613b03ccd # v2
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: ${{ secrets.TOKEN }}
           file: |
             ${{ github.workspace }}/src/pyecotrend_ista/pyecotrend_ista.zip
             ${{ github.workspace }}/src/pyecotrend_ista/pyecotrend_ista.zip.asc
