--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -44,11 +44,20 @@ jobs:
         id: checkTag
         with:
           tag: ${{ steps.version.outputs.version }}
+      - if: steps.checkTag.outputs.exists == 'false'
+        name: Check Tag
+        id: check-tag
+        run: |
+          if [[ "${{ steps.version.outputs.version }}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+              echo "match=true" >> $GITHUB_OUTPUT
+          fi
       - name: ZIP Component Dir
+        if: steps.check-tag.outputs.match == 'true'
         run: |
           cd ${{ github.workspace }}/src/pyecotrend_ista
           zip -r pyecotrend_ista.zip ./
       - name: Import GPG key
+        if: steps.check-tag.outputs.match == 'true'
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
           PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
@@ -61,6 +70,7 @@ jobs:
           gpg --list-keys
 
       - name: Debug Passphrase
+        if: steps.check-tag.outputs.match == 'true'
         run: |
           if [ -z "$PASSPHRASE" ]; then
             echo "Passphrase is empty!"
@@ -72,12 +82,14 @@ jobs:
           PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
       - name: Sign ZIP file
+        if: steps.check-tag.outputs.match == 'true'
         env:
           PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: |
           gpg --detach-sign --batch --yes --pinentry-mode loopback --passphrase "$PASSPHRASE" -a ${{ github.workspace }}/src/pyecotrend_ista/pyecotrend_ista.zip
 
       - name: Upload zip to release
+        if: steps.check-tag.outputs.match == 'true'
         uses: svenstaro/upload-release-action@04733e069f2d7f7f0b4aebc4fbdbce8613b03ccd # v2
         with:
           repo_token: ${{ secrets.TOKEN }}
@@ -86,6 +98,7 @@ jobs:
           tag: ${{ steps.version.outputs.version }}
           overwrite: true
       - name: Upload zip to release
+        if: steps.check-tag.outputs.match == 'true'
         uses: svenstaro/upload-release-action@04733e069f2d7f7f0b4aebc4fbdbce8613b03ccd # v2
         with:
           repo_token: ${{ secrets.TOKEN }}
@@ -93,13 +106,6 @@ jobs:
           asset_name: pyecotrend_ista.zip.asc
           tag: ${{ steps.version.outputs.version }}
           overwrite: true
-      - if: steps.checkTag.outputs.exists == 'false'
-        name: Check Tag
-        id: check-tag
-        run: |
-          if [[ "${{ steps.version.outputs.version }}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-              echo "match=true" >> $GITHUB_OUTPUT
-          fi
       - name: Create Release
         if: steps.check-tag.outputs.match == 'true'
         uses: softprops/action-gh-release@e7a8f85e1c67a31e6ed99a94b41bd0b71bbee6b8 # v2.0.9
