--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,9 +34,9 @@ requires-python = ">=3.11"
 
 [project.optional-dependencies]
 doc = [
-  "tox==4.16.0",
+  "tox==4.23.2",
   "mkdocs==1.6.1",
-  "mkdocstrings[python]==1.13.0",
+  "mkdocstrings[python]>=0.26",
   "Markdown==3.3.6",
   "markdown-callouts==0.4.0",
   "mkdocs-material==9.5.50",
