--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,28 +34,70 @@ requires-python = ">=3.11"
 
 [project.optional-dependencies]
 doc = [
-  "tox==4.23.2",
-  "mkdocs==1.6.1",
-  "mkdocstrings[python]>=0.26",
-  "Markdown==3.3.6",
+  "babel==2.16.0",
+  "cachetools==5.5.0",
+  "certifi==2024.12.14",
+  "chardet==5.2.0",
+  "charset-normalizer==3.4.1",
+  "click==8.1.8",
+  "colorama==0.4.6",
+  "csscompressor==0.9.5",
+  "distlib==0.3.9",
+  "filelock==3.16.1",
+  "ghp-import==2.1.0",
+  "gitdb==4.0.12",
+  "gitpython==3.1.44",
+  "griffe==1.5.5",
+  "htmlmin2==0.1.13",
+  "idna==3.10",
+  "jinja2==3.1.5",
+  "jsmin==3.0.1",
+  "markdown==3.7",
   "markdown-callouts==0.4.0",
-  "mkdocs-material==9.5.50",
-  "pygments==2.17.2",
-  "pymdown-extensions==10.3.1",
+  "markupsafe==3.0.2",
   "mdx-gh-links==0.4",
+  "mergedeep==1.3.4",
+  "mkdocs==1.6.1",
+  "mkdocs-autorefs==1.3.0",
   "mkdocs-click==0.8.1",
+  "mkdocs-get-deps==0.2.0",
+  "mkdocs-git-authors-plugin==0.9.2",
+  "mkdocs-git-committers-plugin-2==2.4.1",
+  "mkdocs-git-revision-date-localized-plugin==1.3.0",
+  "mkdocs-literate-nav==0.6.1",
+  "mkdocs-material==9.5.50",
+  "mkdocs-material-extensions==1.3.1",
   "mkdocs-minify-plugin==0.8.0",
-  "mkdocs-git-revision-date-localized-plugin==1.2.6",
-  "mkdocs-git-committers-plugin-2==2.3.0",
-  "mkdocs-git-authors-plugin==0.9.0",
-  "mkdocs-autorefs==1.0.1",
-  "mkdocs-literate-nav==0.6.1"
+  "mkdocstrings[python]==0.27.0",
+  "mkdocstrings-python==1.13.0",
+  "packaging==24.2",
+  "paginate==0.5.7",
+  "pathspec==0.12.1",
+  "platformdirs==4.3.6",
+  "pluggy==1.5.0",
+  "pygments==2.19.1",
+  "pymdown-extensions==10.14",
+  "pyproject-api==1.8.0",
+  "python-dateutil==2.9.0.post0",
+  "pytz==2024.2",
+  "pyyaml==6.0.2",
+  "pyyaml-env-tag==0.1",
+  "regex==2024.11.6",
+  "requests==2.32.3",
+  "six==1.17.0",
+  "smmap==5.0.2",
+  "tomli==2.2.1",
+  "tox==4.23.2",
+  "typing-extensions==4.12.2",
+  "urllib3==2.3.0",
+  "virtualenv==20.29.1",
+  "watchdog==6.0.0"
 ]
 publish = [
-  "tox==4.16.0"
+  "tox==4.23.2"
 ]
 test = [
-  "tox==4.16.0",
+  "tox==4.23.2",
   "pytest==8.2.2",
   "pytest-cov==5.0.0",
   "pytest-xdist==3.6.1",
