--- a/tox.ini
+++ b/tox.ini
@@ -60,21 +60,22 @@ commands =
 description = Build the documentation
 skip_install = true
 deps =
-    mkdocs==1.6.0
-    mkdocstrings[python]>=0.18
-    Markdown==3.3.6
-    markdown-callouts==0.4.0
-    mkdocs-material==9.5.29
-    pygments==2.17.2
-    pymdown-extensions==10.3.1
-    mdx-gh-links==0.4
-    mkdocs-click==0.8.1
-    mkdocs-minify-plugin==0.8.0
-    mkdocs-git-revision-date-localized-plugin==1.2.6
-    mkdocs-git-committers-plugin-2==2.3.0
-    mkdocs-git-authors-plugin==0.9.0
-    mkdocs-autorefs==1.0.1
-    mkdocs-literate-nav==0.6.1
+    -rrequirements.txt
+    ; mkdocs==1.6.1
+    ; mkdocstrings[python]>=0.18
+    ; Markdown==3.3.6
+    ; markdown-callouts==0.4.0
+    ; mkdocs-material==9.5.50
+    ; pygments==2.17.2
+    ; pymdown-extensions==10.3.1
+    ; mdx-gh-links==0.4
+    ; mkdocs-click==0.8.1
+    ; mkdocs-minify-plugin==0.8.0
+    ; mkdocs-git-revision-date-localized-plugin==1.2.6
+    ; mkdocs-git-committers-plugin-2==2.3.0
+    ; mkdocs-git-authors-plugin==0.9.0
+    ; mkdocs-autorefs==1.0.1
+    ; mkdocs-literate-nav==0.6.1
 setenv =
     MKDOCS_GIT_COMMITTERS_APIKEY = {env:GITHUB_TOKEN}
 commands =
