--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,3 +12,6 @@ updates:
     directory: /
     schedule:
       interval: daily
+      time: "22:30"
+      timezone: "Europe/Berlin"
+    open-pull-requests-limit: 5
