--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -151,7 +151,7 @@ markdown_extensions:
   - tables
   - pymdownx.highlight:
       use_pygments: false
-      anchor_linenums: true
+      # anchor_linenums: true
   - pymdownx.snippets
   - pymdownx.superfences
   - mdx_gh_links:
