--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,8 +47,8 @@ plugins:
             - url: https://docs.python.org/3.12/objects.inv
               domains: [std, py]
           paths: [src, scripts, .]
-          setup_commands:
-            - "import sys; sys.path.insert(0, 'src')"
+          # setup_commands:
+          #   - "import sys; sys.path.insert(0, 'src')"
           options:
             line_length: 80
             docstring_options:
