--- a/requirements.in
+++ b/requirements.in
@@ -1,16 +1,77 @@
-tox
-mkdocs
-mkdocstrings[python]
-Markdown
-markdown-callouts
-mkdocs-material
-pygments
-pymdown-extensions
-mdx-gh-links
-mkdocs-click
-mkdocs-minify-plugin
-mkdocs-git-revision-date-localized-plugin
-mkdocs-git-committers-plugin-2
-mkdocs-git-authors-plugin
-mkdocs-autorefs
-mkdocs-literate-nav
+# Basisabhängigkeiten für den Build
+setuptools>=61.2
+setuptools-scm
+requests
+dataclasses_json
+
+# Hauptabhängigkeiten
+requests>=2
+dataclasses-json>=0.6
+
+# Optionale Abhängigkeiten für Dokumentation
+babel==2.17.0
+cachetools==5.5.2
+certifi==2025.4.26
+chardet==5.2.0
+charset-normalizer==3.4.2
+click==8.2.0
+colorama==0.4.6
+csscompressor==0.9.5
+distlib==0.3.9
+filelock==3.18.0
+ghp-import==2.1.0
+gitdb==4.0.12
+gitpython==3.1.44
+griffe==1.7.3
+htmlmin2==0.1.13
+idna==3.10
+jinja2==3.1.6
+jsmin==3.0.1
+markdown==3.8
+markdown-callouts==0.4.0
+markupsafe==3.0.2
+mdx-gh-links==0.4
+mergedeep==1.3.4
+mkdocs==1.6.1
+mkdocs-autorefs==1.4.1
+mkdocs-click==0.9.0
+mkdocs-get-deps==0.2.0
+mkdocs-git-authors-plugin==0.9.5
+mkdocs-git-committers-plugin-2==2.5.0
+mkdocs-git-revision-date-localized-plugin==1.4.5
+mkdocs-literate-nav==0.6.2
+mkdocs-material==9.6.13
+mkdocs-material-extensions==1.3.1
+mkdocs-minify-plugin==0.8.0
+mkdocstrings[python]==0.29.1
+mkdocstrings-python==1.16.10
+packaging==25.0
+paginate==0.5.7
+pathspec==0.12.1
+platformdirs==4.3.8
+pluggy==1.5.0
+pygments==2.19.1
+pymdown-extensions==10.15
+pyproject-api==1.9.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pyyaml==6.0.2
+pyyaml-env-tag==1.0
+regex==2024.11.6
+requests==2.32.3
+six==1.17.0
+smmap==5.0.2
+tomli==2.2.1
+tox==4.25.0
+typing-extensions==4.13.2
+urllib3==2.3.0
+virtualenv==20.31.2
+watchdog==6.0.0
+
+# Abhängigkeiten für Tests
+tox==4.25.0
+pytest==8.3.5
+pytest-cov==6.1.1
+pytest-xdist==3.6.1
+requests-mock[fixture]==1.12.1
+syrupy==4.9.1
