--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,21 @@
 [tox]
 skipsdist = True
-envlist = py311, py312, format, lint, pre-commit, docstrings, documentation, test-publish
+envlist = py311, py312, py313, format, lint, pre-commit, docstrings, documentation, test-publish
 isolated_build = True
 
 [gh-actions]
 python =
     3.11: py311
     3.12: py312
+    3.13: py313
 
 [testenv]
 deps =
-    pytest==8.2.2
-    pytest-cov==5.0.0
-    pytest-xdist==3.6.1
+    pytest==8.4.0
+    pytest-cov==6.1.1
+    pytest-xdist==3.7.0
     requests-mock[fixture]==1.12.1
-    syrupy==4.6.1
+    syrupy==4.9.1
     requests>=2
     dataclasses-json>=0.6
 commands =
