--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -55,6 +55,7 @@ jobs:
         run: |
           cd ${{ github.workspace }}/src/pyecotrend_ista
           zip -r pyecotrend_ista.zip ./
+          
       - name: Import GPG key
         if: steps.check-tag.outputs.match == 'true'
         env:
@@ -64,8 +65,7 @@ jobs:
           mkdir -p ~/.gnupg
           chmod 700 ~/.gnupg
           echo "$GPG_PRIVATE_KEY" | gpg --batch --import
-          echo "use-agent" > ~/.gnupg/gpg.conf
-          echo "allow-loopback-pinentry" >> ~/.gnupg/gpg.conf
+          echo "allow-loopback-pinentry" > ~/.gnupg/gpg.conf
           gpg --list-keys
 
       - name: Debug Passphrase
