--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -115,13 +115,13 @@ jobs:
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and publish package to TestPyPI
-        if: steps.check-tag.outputs.match == 'true'
+        # if: steps.check-tag.outputs.match == 'true'
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.TEST_PYPI_TOKEN }}
         run: tox -e test-publish -- --non-interactive
       - name: Build and publish package to PyPI
-        if: steps.check-tag.outputs.match == 'true'
+        # if: steps.check-tag.outputs.match == 'true'
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
