--- a/tox.ini
+++ b/tox.ini
@@ -90,7 +90,7 @@ deps =
     twine
 commands =
     python -m build
-    python -m twine upload --repository testpypi dist/*
+    python -m twine upload --repository testpypi dist/* --non-interactive
 
 [testenv:publish]
 description = Build and publish the package to PyPI
