--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 build-backend = "setuptools.build_meta"
-requires = ['setuptools>=61.2', "setuptools-scm", "requests", "dataclasses_json"]
+requires = ['setuptools>=77.0.3', "setuptools-scm", "requests", "dataclasses_json"]
 
 [project]
 authors = [
@@ -12,6 +12,7 @@ classifiers = [
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
   "Intended Audience :: Developers",
