--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ classifiers = [
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
-  "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
   "Intended Audience :: Developers",
   "Topic :: Software Development",
@@ -28,7 +27,8 @@ dependencies = [
 description = "Python EcoTrend-ista Api"
 dynamic = ["version", "readme"]
 keywords = ["python", "api", "ecotrend", "ista"]
-license = {file = "LICENSE"}
+license = "MIT License"
+license-files = ["LICENSE"]
 name = "pyEcoTrend-ista"
 # readme = "README.md"
 requires-python = ">=3.11"
