--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
 description = "Python EcoTrend-ista Api"
 dynamic = ["version", "readme"]
 keywords = ["python", "api", "ecotrend", "ista"]
-license = "MIT License"
+license = "MIT"
 license-files = ["LICENSE"]
 name = "pyEcoTrend-ista"
 # readme = "README.md"
