--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -156,7 +156,14 @@ jobs:
           pip install build
           python -m build
 
-      - name: Upload package to PyPI
+      - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@v1.12.4
         with:
+          skip-existing: true
+
+      - name: Publish package to TestPyPI
+        uses: pypa/gh-action-pypi-publish@v1.12.4
+        with:
+          password: ${{ secrets.TEST_PYPI_TOKEN }}
+          repository-url: https://test.pypi.org/legacy/
           skip-existing: true
