--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,7 +74,8 @@ test = [
   "pytest-cov==6.2.1",
   "pytest-xdist==3.8.0",
   "requests-mock[fixture]==1.12.1",
-  "syrupy==4.9.1"
+  "syrupy==4.9.1",
+  "tox==4.30.2"
 ]
 
 [project.urls]
