--- a/requirements.txt
+++ b/requirements.txt
@@ -149,9 +149,7 @@ mkdocstrings[python]==0.30.1
     #   -r requirements.in
     #   mkdocstrings-python
 mkdocstrings-python==1.18.2
-    # via
-    #   -r requirements.in
-    #   mkdocstrings
+    # via mkdocstrings
 mypy-extensions==1.1.0
     # via typing-inspect
 packaging==25.0
